@@ -1,5 +1,6 @@
 Changes
 examples/create_and_print_value_globecoordinate.pl
+examples/create_and_print_value_item.pl
 inc/Module/Install.pm
 inc/Module/Install/AuthorRequires.pm
 inc/Module/Install/AuthorTests.pm
