@@ -1,4 +1,5 @@
 0.03
+ - Add doc for Wikibase::Datatype::Print::Value::Item.
  - Fix doc description for Wikibase::Datatype::Print::Value::Globecoordinate.
 
 0.02 2023-04-10T11:37:10+02:00
